# la28-cricket-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: audioSynth.js  dataManager.js  main.js  stadiumCanvas.js  style.css  voiceSynth.js
la28_cricket/: __init__.py  benchmark.py  config.py  dashboard.py  metrics.py  models.py  obs_overlays.py  schema.py
scripts/: __init__.py  import_official_scorecard.py  run_benchmark.py  verify_remote_endpoint.py
tests/: test_benchmark_dryrun.py  test_cli_scripts.py  test_config.py  test_isolation.py  test_obs_overlays.py  test_regressions.py  test_schema_and_metrics.py
tests/fixtures/: sample_scorecard.json
