[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "la28-cricket-benchmark"
version = "1.0.0"
description = "Fictional LA28 Women's Cricket LLM Benchmark for RTX 4060 Inference Server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LA28 Cricket Benchmark Team"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
la28-run-benchmark = "scripts.run_benchmark:main"
la28-verify-endpoint = "scripts.verify_remote_endpoint:main"
la28-import-scorecard = "scripts.import_official_scorecard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
