[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "la28-cricket-benchmark"
version = "1.1.0"
description = "Unofficial universal LA 2028 women's cricket benchmark for OpenAI-compatible inference endpoints"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "LA 2028 Cricket Benchmark contributors"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
la28-run-benchmark = "scripts.run_benchmark:main"
la28-verify-endpoint = "scripts.verify_remote_endpoint:main"
la28-import-scorecard = "scripts.import_official_scorecard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["la28_cricket*", "scripts*"]
